<resources>
    <string name="app_name">Payment Detail</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="amount">Amount</string>
    <string name="provider">Provider(ICIC, Citibank, etc)</string>
    <string name="trans_ref">Transaction Reference</string>
    <string name="add_payment">Add payment</string>
    <string name="add_payment_ul"><u>Add payment</u></string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="total_amount">Total Amount=</string>
    <string name="payment">Payments</string>
    <string name="save">Save</string>
    <string name="click_save">Click Save to update this change</string>
    <string name="payment_exists">Payment exists against this type</string>

    <string-array name="payment_provider">
        <item>Cash</item>
        <item>Bank Transfer</item>
        <item>Credit Card</item>
    </string-array>
</resources>