<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/Theme.PaymentDetail.PopupOverlay"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/total_amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:textAllCaps="true"
                android:textColor="@color/borderColor"
                android:textSize="19sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="32dp"
                android:layout_toEndOf="@+id/total_amount_title"
                android:text="322423"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/payment"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/payment_data_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_payment_ul"
            android:textColor="@color/blue"
            android:textSize="21sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/blue"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="6dp" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>